--- a/package.json
+++ b/package.json
@@ -1,4 +1,37 @@
 {
 	"name":    "@vadym.gidulian/logger",
-	"version": "0.1.0"
+	"version": "1.0.0",
+	
+	"description": "A transparent logger that just logs",
+	"keywords": [
+		"console",
+		"log",
+		"logger",
+		"logging",
+		"logs"
+	],
+	
+	"main":  "src/index.js",
+	"types": "src/index.d.ts",
+	
+	"scripts": {
+		"test": "jest"
+	},
+	
+	"engines": {
+		"node": ">=10"
+	},
+	
+	"dependencies": {
+		"@types/minimatch": "3.0",
+		"@types/node":      ">=10",
+		
+		"minimatch": "3.0"
+	},
+	"devDependencies": {
+		"del":       "5.1",
+		"jest":      "26.6",
+		"mkdirp":    "1.0",
+		"ncp":       "2.0"
+	}
 }
